Fixed the gap between temp and feels like

--- a/styling.css
+++ b/styling.css
@@ -40,15 +40,14 @@ h2 {
 
 .tempToday {
   font-size: 50px;
-  margin-top: 15px;
-  margin-bottom: 5px;
+  margin: none;
 }
 
 h3 {
-  margin-top: 5px;
   text-align: left;
   font-weight: lighter;
   margin-left: 15px;
+  margin-bottom: 10px;
   color: #E7CFBC;
 }
 
